解决ie兼容性问题(babel-polyfill)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>湘潭福盛全官网</title>
+    <!-- 解决ie不兼容性问题 -->
+    <script src="https://cdn.bootcss.com/babel-polyfill/6.23.0/polyfill.min.js"></script>
   </head>
   <body>
 
