--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>湘潭福盛全官网</title>
     <!-- 解决ie不兼容性问题 -->
     <script src="https://cdn.bootcss.com/babel-polyfill/6.23.0/polyfill.min.js"></script>
+    <script src="//cdn.bootcss.com/vue/2.4.2/vue.min.js"></script>
+    <script src="//cdn.bootcss.com/vue-router/2.7.0/vue-router.min.js"></script>
+    <script src="//cdn.bootcss.com/vuex/2.2.1/vuex.min.js"></script>
+    <script src="//cdn.bootcss.com/axios/0.15.3/axios.min.js"></script>
+    <script src="https://unpkg.com/element-ui@2.0.5/lib/index.js"></script>
   </head>
   <body>
-
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
